# AI-Powered-Quiz-APP

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: style.css
templates/: index.html  quiz.html  result.html
