[project]
name = "ai-powered-quiz-app"
version = "0.1.0"
description = "Flask app generating quizzes using Google GenAI"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "Flask==3.1.2",
  "python-dotenv==1.2.1",
  "google-genai==1.56.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
